--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                   <a class="hero__title-link link" href="#">
                      Ashley & Co
                   </a>
-                  <img class="hero__img img" src="img/powerHouse.png" alt="powerHouse">
+                  <picture class="hero__pictur">
+                     <source srcset="img/powerHouse.webp" type="img/webp">
+                     <img class="hero__img img" src="img/powerHouse.png" alt="powerHouse">
+                  </picture>
                </div>
                <p class="hero__text hero__img-block-text text">
                   Take your home scent to another realm
@@ -74,7 +77,7 @@
                <p class="hero__text hero__text_top text">
                   Let Power House Tui & Kahili uplift every space and surface that surrounds you, with each
                   mist-filledpump.
-                  <a class="hero__text-link hero__link_after link" href="#">
+                  <a class="hero__text-link  link" href="#">
                      SHOP NEW PRODUCT
                   </a>
                </p>
@@ -104,14 +107,18 @@
                </div>
             </div>
             <div>
-            <img class="candles__img img" src="img/waxed.png" alt="waxed">
-            <div class="candles__text-box">
-               <a class="candles__link link" href="#">
-                  browse our full collection
-               </a>
-               <p class="candles__text candles__text_size text">
-                  Share the light, everyday
-               </p>
+               <picture class="candles__picture">
+                  <source srcset="img/waxed.webp" type="img/webp">
+                  <img class="candles__img img" src="img/waxed.png" alt="waxed">
+               </picture>
+               <div class="candles__text-box">
+                  <a class="candles__link link" href="#">
+                     browse our full collection
+                  </a>
+                  <p class="candles__text candles__text_size text">
+                     Share the light, everyday
+                  </p>
+               </div>
             </div>
          </div>
       </section>
@@ -120,13 +127,19 @@
          <div class="product__container container">
             <ul class="product__list list-reset">
                <li class="product__item">
-                  <img class="product__img-left img" src="img/lemon.png" alt="lemon">
+                  <picture class="product__picture">
+                     <source srcset="img/lemon.webp" type="img/webp">
+                     <img class="product__img-left img" src="img/lemon.png" alt="lemon">
+                  </picture>
                   <p class="product__text text">
                      Dialed to 70% alcohol
                   </p>
                </li>
                <li class="product__item">
-                  <img class="product__img-right img" src="img/topUp.png" alt="topUp">
+                  <picture class="product__picture">
+                     <source srcset="img/topUp.webp" type="img/webp">
+                     <img class="product__img-right img" src="img/topUp.png" alt="topUp">
+                  </picture>
                   <p class="product__text text">
                      REFILL WITH TOPUP
                   </p>
@@ -137,7 +150,10 @@
 
       <section class="about">
          <div class="about__container container">
-            <img class="about__img img" src="img/mackupWoman.png" alt="mackupWoman">
+            <picture class="about__picture">
+               <source srcset="img/mackupWoman.webp" type="img/webp">
+               <img class="about__img img" src="img/mackupWoman.png" alt="mackupWoman">
+            </picture>
             <div class="about__content">
                <h2 class="about__title title">
                   ABOUT US
@@ -175,7 +191,10 @@
                   </a>
                </div>
             </div>
-            <img class="modern__img img" src="img/woman.png" alt="woman">
+            <picture class="modern__picture">
+               <source srcset="img/woman.webp" type="img/webp">
+               <img class="modern__img img" src="img/woman.png" alt="woman">
+            </picture>
             <div class="modern__subtitle-box">
                <span class="modern__subtitle subtitle">
                   Home Perfume
@@ -216,7 +235,10 @@
                   </a>
                </div>
             </div>
-            <img class="wash__img img" src="img/orange.png" alt="orange">
+            <picture class="wash__picture">
+               <source srcset="img/orange.webp" type="img/webp">
+               <img class="wash__img img" src="img/orange.png" alt="orange">
+            </picture>
             <div class="wash__subtitle-box">
                <span class="wash__subtitle subtitle">
                   Your habitual helper
@@ -240,7 +262,10 @@
                   </a>
                </div>
             </div>
-            <img class="industry__img img" src="img/hand.png" alt="hand">
+            <picture class="industry__picture">
+               <source srcset="img/hand.webp" type="img/webp">
+               <img class="industry__img img" src="img/hand.png" alt="hand">
+            </picture>
             <div class="industry__subtitle-box">
                <span class="industry__subtitle subtitle">
                   Hold Me
