--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
 
    <main class="main">
       <section class="hero">
+         <h1 class="visually-hidden">beauty tips</h1>
          <div class="hero__container container">
             <div class="hero__img-block">
                <div class="hero__img-box ibg">
-                  <a class="hero__title-link link" href="#">
+                  <h2 class="hero__title title">
                      Ashley & Co
-                  </a>
+                  </h2>
                   <picture class="hero__pictur">
                      <source srcset="img/powerHouse.webp" type="img/webp">
                      <img class="hero__img img" src="img/powerHouse.png" alt="powerHouse">
@@ -131,18 +132,18 @@
                      <source srcset="img/lemon.webp" type="img/webp">
                      <img class="product__img-left img" src="img/lemon.png" alt="lemon">
                   </picture>
-                  <p class="product__text text">
+                  <h2 class="product__title title">
                      Dialed to 70% alcohol
-                  </p>
+                  </h2>
                </li>
                <li class="product__item">
                   <picture class="product__picture">
                      <source srcset="img/topUp.webp" type="img/webp">
                      <img class="product__img-right img" src="img/topUp.png" alt="topUp">
                   </picture>
-                  <p class="product__text text">
+                  <h2 class="product__title title">
                      REFILL WITH TOPUP
-                  </p>
+                  </h2>
                </li>
             </ul>
          </div>
