--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   </p>
                </div>
             </div>
-            <div>
+            <div class="candles__img-box">
                <picture class="candles__picture">
                   <source srcset="img/waxed.webp" type="img/webp">
                   <img class="candles__img img" src="img/waxed.png" alt="waxed">
