--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                      <img class="hero__img img" src="img/powerHouse.png" alt="powerHouse">
                   </picture>
                </div>
-               <p class="hero__text hero__img-block-text text">
+               <p class="hero__text hero__img-block_text text">
                   Take your home scent to another realm
                </p>
             </div>
@@ -105,21 +105,21 @@
                      The flicker of the wick and the wafting of scent…Waxed Perfume is the simplest daily
                      self-indulgence.
                   </p>
-               </div>
-            </div>
-            <div class="candles__img-box">
-               <picture class="candles__picture">
-                  <source srcset="img/waxed.webp" type="img/webp">
-                  <img class="candles__img img" src="img/waxed.png" alt="waxed">
-               </picture>
-               <div class="candles__text-box">
                   <a class="candles__link link" href="#">
                      browse our full collection
                   </a>
-                  <p class="candles__text candles__text_size text">
-                     Share the light, everyday
-                  </p>
                </div>
+            </div>
+            <div class="candles__img-block">
+               <div class="candles__img-box ibg">
+                  <picture class="candles__picture">
+                     <source srcset="img/waxed.webp" type="img/webp">
+                     <img class="candles__img img" src="img/waxed.png" alt="waxed">
+                  </picture>
+               </div>
+               <p class="candles__text candles__text_size text">
+                  Share the light, everyday
+               </p>
             </div>
          </div>
       </section>
